# mik

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  cliff.toml  install-bench-tools.sh  install.ps1  install.sh  release-please-config.json
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: runtime_bench.rs  runtime_benchmarks.rs
benchmarks/: data.js
daemon-test/src/: lib.rs
dev/bench/: data.js
docs/: BUILDING-COMPONENTS.md  astro.config.mjs  package.json
docs-dev/adr/: ADR-002-SIDECAR-SECURITY-MODEL.md  ADR-003-BRIDGE-COMPOSITION.md  ADR-004-CONTENT-ADDRESSABLE-AOT-CACHE.md  ADR-005-CIRCUIT-BREAKER-DESIGN.md  ADR-006-LOAD-BALANCER-STRATEGY.md
docs/src/content/docs/: getting-started.mdx  index.mdx
docs/src/content/docs/guides/: building-components.mdx  configuration.mdx  daemon.mdx  docker.mdx  monitoring.mdx  multi-tenant.mdx  reliability.mdx  scripts.mdx  systemd.mdx
docs/src/content/docs/reference/: architecture.mdx  cli.mdx  security.mdx  sidecars.mdx
examples/: README.md
examples/configs/: README.md  minimal.toml  multi-module.toml  multi-tenant.toml  production.toml  with-load-balancer.toml  with-scripts.toml
examples/daemon-test/: Cargo.toml
examples/daemon-test/src/: bindings.rs  lib.rs
examples/daemon-test/wit/: world.wit
examples/deploy/systemd/: mik.service  mik.socket
examples/hello-go/: .gitignore  README.md  go.mod
examples/hello-js/: .gitignore  README.md
examples/hello-typescript/: README.md
examples/hello-world/: .gitignore  Cargo.toml  mik.toml
examples/hello-world/src/: bindings.rs  lib.rs
examples/hello-world/wit/: world.wit
examples/script-test/: mik.toml
examples/script-test/scripts/: chain.js  hello.js
examples/sidecar-test/: Cargo.toml  mik.toml
examples/sidecar-test/src/: bindings.rs  lib.rs
examples/sidecar-test/wit/: world.wit
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_http_host_allowed.rs  fuzz_queue_messages.rs  fuzz_sql_injection.rs  fuzz_storage_paths.rs  fuzz_validate_path_within_base.rs
proptest-regressions/: utils_property_tests.txt
proptest-regressions/daemon/cron/: property_tests.txt
proptest-regressions/runtime/security/path/: property_tests.txt
scripts/: wsl-check.sh
src/: config.rs  constants.rs  lib.rs  main.rs  manifest.rs  registry.rs  utils.rs
src/cache/: mod.rs  schema.rs
src/commands/: add.rs  build.rs  cache.rs  daemon.rs  mod.rs  new.rs  publish.rs  pull.rs  run.rs  strip.rs
src/commands/new/: github.rs  interactive.rs  mod.rs  templates.rs
src/commands/publish/: mod.rs
src/daemon/: config.rs  cron.rs  error.rs  http.rs  logging.rs  metrics.rs  mod.rs  otlp.rs  process.rs  state.rs  watch.rs
src/daemon/cron/: execution.rs  mod.rs  property_tests.rs  scheduler.rs  types.rs
src/daemon/http/: lifecycle_tests.rs  mod.rs  tests.rs  types.rs
src/daemon/http/handlers/: cron.rs  instances.rs  kv.rs  mod.rs  services.rs  sql.rs  storage.rs
src/daemon/process/: lifecycle.rs  log_rotation.rs  mod.rs  types.rs
src/daemon/services/: builder.rs  kv.rs  mod.rs  queue.rs  sql.rs  storage.rs
src/daemon/services/kv/: async_ops.rs  mod.rs  property_tests.rs  store.rs  tests.rs  types.rs
src/daemon/services/sql/: memory.rs  sqlite.rs
src/daemon/state/: history.rs  mod.rs  property_tests.rs  types.rs
src/manifest/: defaults.rs  mod.rs  property_tests.rs  types.rs  validation.rs
src/reliability/: mod.rs
src/reliability/circuit_breaker/: config.rs  error.rs  mod.rs  state.rs  tests.rs
src/runtime/: aot_cache.rs  builder.rs  cache.rs  compression.rs  endpoints.rs  error.rs  host.rs  host_config.rs  mod.rs  module_loader.rs  observability.rs  reliability.rs  request.rs  request_handler.rs  schema_handler.rs  security.rs  server.rs  spans.rs  trace_context.rs  types.rs
src/runtime/cluster/: mod.rs  process.rs  task.rs
src/runtime/lb/: backend.rs  circuit_breaker.rs  health.rs  metrics.rs  mod.rs  proxy.rs  selection.rs  server.rs
src/runtime/lb/reload/: types.rs
src/runtime/script/: bindings.rs  context.rs  handler.rs  mod.rs  runtime.rs
src/runtime/security/: error.rs
src/runtime/security/path/: mod.rs  property_tests.rs
tests/: common.rs  deadlock_tests.rs  file_io_tests.rs  graceful_shutdown_tests.rs  http_edge_cases_tests.rs  http_rfc_compliance_tests.rs  memory_stability_tests.rs  performance_regression_tests.rs  property_tests.rs  script_tests.rs  tenant_routing_tests.rs  tracing_tests.rs  wasm_tests.rs
tests/fixtures/modules/: .gitignore  fuel_burner.wasm  infinite_loop.wasm  memory_hog.wasm  oversized_response.wasm  panic.wasm  slow_response.wasm
tests/fixtures/user-modules/tenant-xyz/: products.wasm
