[package]
name = "mik"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "CLI for mik-sdk WASI HTTP components"
rust-version = "1.89"
repository = "https://github.com/dufeutech/mik"
homepage = "https://github.com/dufeutech/mik"
documentation = "https://docs.rs/mik"
authors = ["mik contributors"]
keywords = ["wasm", "wasi", "http", "cli", "webassembly"]
categories = ["command-line-utilities", "wasm"]
readme = "README.md"

[[bin]]
name = "mik"
path = "src/main.rs"

[lib]
name = "mik"
path = "src/lib.rs"

[features]
default = ["registry", "otlp", "native-tls"]
# Registry features (git + OCI) - optional for minimal Docker builds
registry = ["dep:git2", "dep:oci-client", "dep:ureq"]
# OpenTelemetry OTLP export for distributed tracing (Jaeger, Tempo, etc.)
# Enabled by default for production observability
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
# TLS backends:
#   - native-tls: Uses system TLS (schannel/security-framework/OpenSSL) - default for native builds
#   - rustls: Pure Rust TLS with aws-lc-rs - required for Docker/musl (no system TLS)
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
thiserror = "2"

# Serialization
toml = "0.9"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"

# Validation
semver = "1.0"
url = "2.5"

# HTTP client for GitHub releases (optional - registry feature)
ureq = { version = "3", features = ["json", "gzip"], optional = true }

# Tar archive creation (used in build for packaging)
tar = "0.4"

# OCI registry client (optional - registry feature)
oci-client = { version = "0.15", optional = true }

# File system
dirs = "6.0"
glob = "0.3"
tempfile = "3.24"

# Git operations (optional - registry feature)
git2 = { version = "0.20", optional = true }

# Progress indicators
indicatif = "0.18"

# Fast allocator for musl builds (fixes multi-core performance)
mimalloc = { version = "0.1", default-features = false }

# Reliability primitives (retry with backoff)
backon = "1"

# === Runtime dependencies (for mik serve) ===

# Wasmtime runtime
wasmtime = { version = "40", features = ["component-model", "async", "cache"] }
wasmtime-wasi = "40"
wasmtime-wasi-http = "40"

# WASM manipulation (for stripping components)
zip = "7"

# HTTP server
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "http1",
    "http2",
] }
http-body-util = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (optional - otlp feature)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# Caching and concurrency
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"

# Content-addressable hashing for AOT cache
blake3 = "1"
hex = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
percent-encoding = "2.3"
futures = "0.3"
bytes = "1.5"
flate2 = "1.0"
async-compression = { version = "0.4", features = ["gzip", "tokio"] }

# JavaScript runtime for orchestration scripts
rquickjs = { version = "0.11", features = ["classes"] }

# === Daemon dependencies (for mik api/up/down/ps) ===

# Embedded databases
redb = "3.1"                                            # KV store + state persistence
rusqlite = { version = "0.38", features = ["bundled"] } # Embedded SQL database

# Daemon features
tokio-cron-scheduler = "0.15" # Cron job scheduling
notify = { version = "8.2", default-features = false, features = [
    "macos_kqueue",
] } # Hot reload file watching
sysinfo = "0.37" # Process info for mik ps

# Prometheus metrics (without push-gateway to avoid aws-lc-sys/NASM on Windows)
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = [
    "http-listener",
] }

# HTTP API (daemon)
axum = "0.8"
# TLS backend selected via features: native-tls (default) or rustls (Docker/musl)
reqwest = { version = "0.13.1", default-features = false, features = ["json", "http2"] }

# CPU detection for auto worker count
num_cpus = "1.16"

# === L7 Load Balancer ===
# Using hyper + tower for cross-platform support
tower = { version = "0.5", features = [
    "util",
    "load",
    "balance",
    "limit",
    "timeout",
    "retry",
] }
tower-http = { version = "0.6", features = ["timeout", "cors"] }
hyper-timeout = "0.5"

# Security: constant-time comparison for API keys (prevents timing attacks)
subtle = "2"
async-trait = "0.1"
dashmap = "6.1.0"

# Unix-only dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
hyper = { version = "1.5", features = ["client"] }
tower = { version = "0.5", features = ["util"] }
axum-test-helpers = { package = "axum-test-helper", version = "0.4" }
serial_test = "3"
proptest = "1.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
loom = "0.7"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "runtime_benchmarks"
harness = false

[[bench]]
name = "runtime_bench"
harness = false

[[bench]]
name = "http_latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "module_loading"
harness = false

# =============================================================================
# Lints Configuration
# =============================================================================

[lints.rust]
# Allow loom cfg for concurrency testing
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

# =============================================================================
# Release Profile - Optimized for production
# =============================================================================

[profile.release]
lto = true        # Link-time optimization for smaller, faster binaries
opt-level = 3     # Maximum optimization
codegen-units = 1 # Better optimization at cost of compile time
strip = true      # Strip symbols for smaller binary
panic = "abort"   # No unwinding for CLI tool
