[package]
name = "daemon-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.44.0"

[package.metadata.component]
package = "daemon-test:handler"

[package.metadata.component.target]
path = "wit"
world = "handler"

[package.metadata.component.target.dependencies]
"mik:core" = { path = "wit/deps/core" }
"wasi:logging" = { path = "wit/deps/logging" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }

[profile.release]
lto = true
opt-level = "s"
strip = true
